data/all_generated_tests/raw_wast_tests/call_indirect_MismanagementofBlockNesting_4215.wast
;; 4. **Test Description**:     Develop a scenario with an outer loop containing an inner block. Inside the block, use a `call_indirect` instruction to call a function, followed by a `br` instruction to break to a specific block depth.    **Constraint**: Validate that the break instruction correctly exits to the intended block and that the `call_indirect` properly handles the dynamic type checking.    **Relation to Mismanagement of Block Nesting**: Ensures that the break instruction does not confuse the nesting, leading to incorrect block exits or type mismatches.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (func $f (param i32) (result i32) (i32.const 42))
    (table funcref (elem $f))
    (func $test
      (loop $outer
        (block $inner
          (call_indirect (type $sig) (i32.const 0) (i32.const 0))
          (br $outer)
        )
      )
    )
  )
  "type mismatch"
)